--- a/views/board/default-list.ejs
+++ b/views/board/default-list.ejs
@@ -18,15 +18,18 @@
       </tr>
     </thead>
     <tbody>
-      <% for(let v of lists) { %>
+      <%
+      let i =0;
+        for(let v of lists) {
+          %>
       <tr>
-        <td><%= v.id %></td>
+        <td><%= totalRecord - (page-1)*5 - i++%></td>
         <td class="text-left">
           <a href="<%= goPath %>/<%= v.id %>?<%= goQuery %>"><%= v.title %></a>
         </td>
         <td><%= v.writer %></td>
         <td><%= v.updatedAt %></td>
-        <td>1</td>
+        <td><%= v.readCounter %></td>
       </tr>
       <% } %>
     </tbody>
