--- a/public/scss/board/board-gallery.scss
+++ b/public/scss/board/board-gallery.scss
@@ -5,12 +5,12 @@
   &.list-page {
     overflow-x: hidden;
     .list-wrap {
-      //리스트페이지
+      // list페이지
       @include flex($w: wrap);
       width: 101%;
       .list {
         cursor: pointer;
-        border: 1px solid $white-color;
+        border: 1px solid $light-color;
         border-radius: 6px;
         width: 24%;
         padding: 0.5%;
@@ -19,7 +19,7 @@
         overflow: hidden;
         @include rel;
         @include LG {
-          width: 32.33333%;
+          width: 32.3333%;
         }
         @include MD {
           width: 49%;
@@ -30,17 +30,17 @@
         .img-wrap {
           width: 100%;
           padding-top: 100%;
-          background-size: cover;
           background-position: center;
+          background-size: cover;
           transition: all 0.5s;
         }
         .content-wrap {
           @include layer($l: 0, $t: 0);
+          @include flex($h: center, $v: center);
+          @include flexCol;
           width: 100%;
           height: 100%;
           background-color: rgba(0, 0, 0, 0.7);
-          @include flex($h: center, $v: center);
-          @include flexCol;
           opacity: 0;
           transition: all 0.5s;
           font-size: 1.25em;
@@ -61,9 +61,27 @@
     .td-content {
       padding: 0.25em 0;
       > div {
-        border: 1px solid #dee2ed;
+        border: 1px solid #dee2e6;
         padding: 1em;
         min-height: 200px;
+      }
+    }
+  }
+  &.update-page {
+    .file-wrap {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 0.5em;
+      padding-bottom: 0.5em;
+      border-bottom: 1px dotted #ccc;
+      .img {
+        width: 80px;
+        margin-right: 0.5em;
+        padding: 2px;
+        border: 1px solid #dc3545;
+      }
+      .file {
+        margin-right: 0.5em;
       }
     }
   }
