--- a/views/board/inc/view-bottom.ejs
+++ b/views/board/inc/view-bottom.ejs
@@ -1,7 +1,7 @@
 <div class="text-center my-4">
   <a href="<%= goList %>" class="btn btn-primary">리스트</a>
   <a href="javascript: onDelete();" class="btn btn-danger float-right mx-1">삭제</a>
-  <a href="/<%= goPath %>/<%= id %>?<%= goQuery %>&type=update" class="btn btn-success float-right mx-1">수정</a>
+  <a href="<%= goPath %>/<%= id %>?<%= goQuery %>&type=update" class="btn btn-success float-right mx-1">수정</a>
   <form action="<%= goPath %>" name="deleteForm" method="POST">
     <% for(let v of goLists) { %>
     <input type="hidden" name="<%= v.key %>" value="<%= v.value %>">
