--- a/views/board/gallery-view.ejs
+++ b/views/board/gallery-view.ejs
@@ -18,16 +18,14 @@
         <td class="title">작성일</td>
         <td class="content"><%= list.updatedAt %></td>
       </tr>
-      <% for(let v of list.files) { %>
-      <% if(v.type === 'I') { %>
+      <% for(let v of list.imgs) { %>
       <tr>
         <td colspan="2">
           <div class="file-img my-2">
-            <img src="<%= v.thumbSrc %>" class="w-100">
+            <img src="<%= v.thumbSrc %>" class="mw-100">
           </div>
         </td>
       </tr>
-      <% } %>
       <% } %>
       <tr>
         <td colspan="2" class="td-content">
@@ -35,7 +33,6 @@
         </td>
       </tr>
       <% for(let v of list.files) { %>
-      <% if(v.type === 'F') { %>
       <tr>
         <td class="title">첨부 파일</td>
         <td class="content">
@@ -44,7 +41,6 @@
           </div>
         </td>
       </tr>
-      <% } %>
       <% } %>
     </tbody>
   </table>
