--- a/views/board/default-update.ejs
+++ b/views/board/default-update.ejs
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container default-type update-page">
-  <form action="<%=goPath %>" method="post" enctype="multipart/form-data">
+  <form action="<%= goPath %>" method="POST" enctype="multipart/form-data">
     <% for(let v of goLists) { %>
     <input type="hidden" name="<%= v.key %>" value="<%= v.value %>">
     <% } %>
-    <input type="hidden" name="id" value="1">
+    <input type="hidden" name="id" value="<%= list.id %>">
     <input type="hidden" name="type" value="update">
     <table class="table border-bottom">
       <tbody>
@@ -30,16 +30,17 @@
           <td>이미지 첨부</td>
           <td>
             <% for(let i=0; i<useImg; i++) { %>
+            <% if(list.imgs[i] && list.imgs[i].type === 'I') { %>
             <div class="file-wrap">
-              <% if(list.files[i] && list.files[i].type === 'I') { %>
-              <% let { thumbSrc, name, id, type } = list.files[i]; %>
+              <% let { thumbSrc, name, id, type } = list.imgs[i]; %>
               <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
               <div class="file"><%= name %></div>
-              <button type="button" class="btn btn-sm btn-danger" data-idx="<%= id %>"
+              <button type="button" data-name="img" class="btn btn-sm btn-danger" data-idx="<%= id %>"
                 onclick="onDeleteFile('<%= id %>', this)">삭제</button>
-              <% } %>
             </div>
+            <% } else { %>
             <input type="file" name="img" class="form-control-file mb-2">
+            <% } %>
             <% } %>
           </td>
         </tr>
@@ -47,23 +48,25 @@
           <td>파일 첨부</td>
           <td>
             <% for(let i=0; i<useFile; i++) { %>
+            <% if(list.files[i] && list.files[i].type === 'F') { %>
             <div class="file-wrap">
-              <% if(list.files[i] && list.files[i].type === 'F') { %>
               <% let { name, id, type } = list.files[i]; %>
               <div class="file"><%= name %></div>
-              <button type="button" class="btn btn-sm btn-danger" onclick="onDeleteFile('<%= id %>', this)">삭제</button>
-              <% } %>
+              <button type="button" data-name="pds" class="btn btn-sm btn-danger"
+                onclick="onDeleteFile('<%= id %>', this)">삭제</button>
             </div>
+            <% } else { %>
             <input type="file" name="pds" class="form-control-file mb-2">
+            <% } %>
             <% } %>
           </td>
         </tr>
       </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
-      <button class="btn btn-success float-right mx-1">수정</button>
-      <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
+      <button class="btn btn-success  mx-1">수정</button>
+      <button type="reset" class="btn btn-danger mx-1">다시작성</button>
+      <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary float-right">리스트</a>
     </div>
   </form>
 </article>
