--- a/views/board/gallery-update.ejs
+++ b/views/board/gallery-update.ejs
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="/css/<%= currents[1] %>-<%= boardType %>.css">
 <article class="board-container gallery-type update-page">
-  <form action="<%=goPath %>" method="post" enctype="multipart/form-data">
+  <form action="<%= goPath %>" method="POST" enctype="multipart/form-data">
     <% for(let v of goLists) { %>
     <input type="hidden" name="<%= v.key %>" value="<%= v.value %>">
     <% } %>
-    <input type="hidden" name="id" value="<%= list.id %> ">
+    <input type="hidden" name="id" value="<%= list.id %>">
     <input type="hidden" name="type" value="update">
     <table class="table border-bottom">
       <tbody>
@@ -35,7 +35,7 @@
               <% let { thumbSrc, name, id, type } = list.files[i]; %>
               <img src="<%= thumbSrc %>" alt="<%= name %>" class="img">
               <div class="file"><%= name %></div>
-              <button type="button" class="btn btn-sm btn-danger" data-idx="<%= id %>"
+              <button type="button" data-name="img" class="btn btn-sm btn-danger" data-idx="<%= id %>"
                 onclick="onDeleteFile('<%= id %>', this)">삭제</button>
               <% } %>
             </div>
@@ -51,7 +51,8 @@
               <% if(list.files[i] && list.files[i].type === 'F') { %>
               <% let { name, id, type } = list.files[i]; %>
               <div class="file"><%= name %></div>
-              <button type="button" class="btn btn-sm btn-danger" onclick="onDeleteFile('<%= id %>', this)">삭제</button>
+              <button type="button" data-name="pds" class="btn btn-sm btn-danger"
+                onclick="onDeleteFile('<%= id %>', this)">삭제</button>
               <% } %>
             </div>
             <input type="file" name="pds" class="form-control-file mb-2">
@@ -61,9 +62,9 @@
       </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary">리스트</a>
-      <button class="btn btn-success float-right mx-1">수정</button>
-      <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
+      <button class="btn btn-success  mx-1">수정</button>
+      <button type="reset" class="btn btn-danger mx-1">다시작성</button>
+      <a href="/<%= currents[0] %>/board?boardType=<%=boardType%>" class="btn btn-primary float-right">리스트</a>
     </div>
   </form>
 </article>
