--- a/views/board/default-view.ejs
+++ b/views/board/default-view.ejs
@@ -46,4 +46,8 @@
     </tbody>
   </table>
   <%- include('./inc/view-bottom.ejs', { id: list.id }) %>
+  <% if(useComment) { %>
+  <%- include('./inc/comment.ejs') %>
+  <% } %>
+
 </article>
