--- a/views/inc/header.ejs
+++ b/views/inc/header.ejs
@@ -14,6 +14,7 @@
   </div>
   <nav class="navi-wrap">
     <% for(let v of init.main) { %>
+    <%if(!v.status || user.status >=v.status) {  %>
     <a href="<%= v.link %>" class="navi" <%=(v.target ? `target="${v.target}" ` : '' ) %>>
       <% if(v.path.includes(second)) { %>
       <img src="/img/<%= currents[0] %>/<%= v.src %>_on.jpg" alt="icon" class="mw-100">
@@ -21,6 +22,7 @@
       <img src="/img/<%= currents[0] %>/<%= v.src %>.jpg" alt="icon" class="mw-100">
       <% } %>
     </a>
+    <% } %>
     <% } %>
   </nav>
   <%- include('./tab.ejs') %>
