--- a/views/board/inc/comment-pager.ejs
+++ b/views/board/inc/comment-pager.ejs
@@ -2,27 +2,27 @@
 <div class="pager-wrapper">
   <ul class="pager-wrap">
     <li class="pager pager-first">
-      <a href="<%=goPager%>&page=1" class="material-icons">first_page</a>
+      <a href="<%=goView%>&page2=1" class="material-icons">first_page</a>
     </li>
     <li class="pager pager-prev-set">
-      <a href="<%=goPager%>&page=<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
+      <a href="<%=goView%>&page2=<%= prevPager %>" class="material-icons">keyboard_double_arrow_left</a>
     </li>
     <li class="pager pager-prev">
-      <a href="<%=goPager%>&page=<%= prevPage %>" class="material-icons">chevron_left</a>
+      <a href="<%=goView%>&page2=<%= prevPage %>" class="material-icons">chevron_left</a>
     </li>
     <% for(let i=startPage; i<=endPage; i++) { %>
     <li class="pager <%= page === i ? 'active' : '' %>">
-      <a href="<%=goPager%>&page=<%= i %>"><%= i %></a>
+      <a href="<%=goView%>&page2=<%= i %>"><%= i %></a>
     </li>
     <% } %>
     <li class="pager pager-next">
-      <a href="<%=goPager%>&page=<%= nextPage %>" class="material-icons">chevron_right</a>
+      <a href="<%=goView%>&page2=<%= nextPage %>" class="material-icons">chevron_right</a>
     </li>
     <li class="pager pager-next-set">
-      <a href="<%=goPager%>&page=<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
+      <a href="<%=goView%>&page2=<%= nextPager %>" class="material-icons">keyboard_double_arrow_right</a>
     </li>
     <li class="pager pager-last">
-      <a href="<%=goPager%>&page=<%= totalPage %>" class="material-icons">last_page</a>
+      <a href="<%=goView%>&page2=<%= totalPage %>" class="material-icons">last_page</a>
     </li>
   </ul>
 </div>
