--- a/views/board/inc/comment.ejs
+++ b/views/board/inc/comment.ejs
@@ -1,30 +1,46 @@
 <div class="comment-wrapper">
   <form action="/admin/comment/" method="POST" name="commentForm">
-    <input type="hidden" name="board_id" value="">
-    <input type="hidden" name="user_id" value="">
+    <% for(let v of goLists) { %>
+    <input type="hidden" name="<%= v.key %>" value="<%= v.value %>">
+    <% } %>
+    <input type="hidden" name="board_id" value="<%= list.id %>">
+    <input type="hidden" name="user_id" value="<%= user.id %>">
+    <input type="hidden" name="page2" value="<%= pager.page %>">
     <div class="comment-create">
-      <input type="text" name="writer" class="form-control" placeholder="이름">
-      <input type="text" name="comment" class="form-control" placeholder="댓글">
+      <input type="text" name="writer" class="form-control" placeholder="이름" value="<%=user.username%>">
+      <input type="text" name="comment" class="form-control" placeholder="한줄 코멘트">
       <button class="btn btn-primary">등록</button>
     </div>
   </form>
   <ul class="comment-wrap">
+    <% for(let v of list.BoardComments) { %>
     <li class="comment-list">
       <div class="content">
-        <div class="writer">우정양</div>
-        <p class="comment">비가옵니다.</p>
+        <div class="writer"><%= v.writer %></div>
+        <p class="comment"><%= v.comment %></p>
       </div>
-      <span class="date">2021-11-09 14:36:12</span>
+      <span class="date"><%= v.regDate %></span>
     </li>
-    <li class="comment-list">
-      <div class="content">
-        <div class="writer">우정양</div>
-        <p class="comment">비가옵니다.</p>
-      </div>
-      <span class="date">2021-11-09 14:36:12</span>
-    </li>
-
+    <% } %>
   </ul>
-
+  <%- include('./comment-pager.ejs', pager) %>
 </div>
 <link rel="stylesheet" href="/css/board-comment.css">
+<script>
+  $('form[name="commentForm"]').submit(onCommentSubmit);
+
+  function onCommentSubmit(e) {
+    e.preventDefault();
+    var writer = this.writer.value.trim();
+    var comment = this.comment.value.trim();
+    if (writer === '') {
+      this.writer.focus();
+      return false;
+    }
+    if (comment === '') {
+      this.comment.focus();
+      return false;
+    }
+    this.submit();
+  }
+</script>
