board comment 완료!

--- a/public/scss/board/board-comment.scss
+++ b/public/scss/board/board-comment.scss
@@ -22,6 +22,7 @@
     margin-top: 1em;
     border-top: 1px solid #ccc;
     .comment-list {
+      @include rel;
       padding: 0.5em;
       border-bottom: 1px solid #ccc;
       @include flex($h: space-between, $v: flex-start);
@@ -39,6 +40,12 @@
         font-size: 0.875em;
         color: #aaa;
         text-align: right;
+      }
+      .bt-delete {
+        @include layer($r: 0.25em, $b: 0.25em);
+      }
+      form[name='deleteCommentForm'] {
+        @include abs;
       }
     }
   }
