--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -1,58 +1,82 @@
 <%- include('../../inc/head.ejs') %>
 <%- include('../../inc/header.ejs') %>
 <link rel="stylesheet" href="/css/quill.snow.css">
-<section class="prd-wrapper wrapper">
-  <h4 class="title bullet my-2">
-    상품 <%= (type === 'create' ? '생성' : '수정') %> 
-  </h4>
-  <form action="/<%= currents[0] %>/prd" method="post" enctype="multipart/form-data">
-    <input type="hidden" name="id" value="1">
-    <input type="hidden" name="_method" value="PUT">
+<section class="prd-wrapper wrapper form-wrapper">
+  <h4 class="title bullet my-2">상품 등록</h4>
+  <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" name="prdCreateForm">
     <table class="table border-bottom">
       <tbody>
         <tr>
-          <td class="title" style="width: 15%;">상품명</td>
+          <td class="title" style="width: 15%;">
+            상품명
+            <span class="red">*</span>
+          </td>
           <td class="content">
             <input type="text" name="title" class="form-control" placeholder="상품명">
           </td>
         </tr>
         <tr>
+          <td class="title" style="width: 15%;">
+            판매여부
+            <span class="red">*</span>
+          </td>
+          <td class="content">
+            <select name="status" class="form-control small">
+              <option value="0">판매중지</option>
+              <option value="1">일시판매중지</option>
+              <option value="2" selected>판매중</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
           <td class="title">소비자가격</td>
           <td class="content">
-            <input type="number" name="price-ori" class="form-control" placeholder="소비자가격">
+            <input type="number" name="priceOrigin" class="form-control small" placeholder="소비자가격">
           </td>
         </tr>
         <tr>
           <td class="title">판매가격</td>
           <td class="content">
-            <input type="number" name="price-sale" class="form-control" placeholder="판매가격">
+            <input type="number" name="priceSale" class="form-control small" placeholder="판매가격">
+          </td>
+        </tr>
+        <tr>
+          <td class="title">
+            재고량
+            <span class="red">*</span>
+          </td>
+          <td class="content">
+            <input type="number" name="amount" class="form-control small" placeholder="재고량" value="-1">
+            <div class="red">* -1을 입력하면 재고량 파악을 하지 않습니다(무제한)</div>
           </td>
         </tr>
         <tr>
           <td class="title">요약설명</td>
           <td>
-            <textarea name="content" class="form-control" placeholder="내용을 입력하세요." style="min-height: 200px;"></textarea>
+            <textarea name="summary" class="form-control" placeholder="내용을 입력하세요."
+              style="min-height: 200px;"></textarea>
           </td>
         </tr>
         <tr>
           <td colspan="2">
             <div id="editor" style="min-height: 200px;"></div>
+            <input type="hidden" name="content">
           </td>
         </tr>
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=1; i<=10; i++) { %> 
-              <input type="file" name="img" class="form-control-file mb-2">
+            <% for(let i=1; i<=10; i++) { %>
+            <input type="file" name="img" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
       </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/<%= currents[0] %>/prd" class="btn btn-primary">리스트</a>
-      <button class="btn btn-success float-right mx-1">수정</button>
-      <button type="reset" class="btn btn-danger float-right mx-1">다시작성</button>
+      <a href="/<%= currents[0] %>/<%= currents[1] %>" class="btn btn-primary float-right">리스트</a>
+      <button class="btn btn-primary mx-1">등록</button>
+      <button type="reset" class="btn btn-danger mx-1">다시작성</button>
     </div>
   </form>
 </section>
