--- a/public/scss/admin/admin-prd.scss
+++ b/public/scss/admin/admin-prd.scss
@@ -50,5 +50,27 @@
     .red {
       color: red;
     }
+    .modal-wrapper {
+      @include flex($h: center, $v: center);
+      @include layer($p: fixed, $l: 0, $t: 0, $i: 99);
+      width: 100%;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.7);
+      .modal-wrap {
+        width: 50%;
+        min-width: 300px;
+        height: 80%;
+        border: 2px solid $dark-color;
+        background-color: white;
+        overflow: auto;
+        @include flex($h: center, $v: center);
+        @include flexCol;
+        #jstreeWrap {
+          margin-top: 1em;
+          width: 90%;
+          flex-grow: 1;
+        }
+      }
+    }
   }
 }
