--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -4,7 +4,9 @@
 <link rel="stylesheet" href="/css/jstree/style.min.css">
 <section class="prd-wrapper wrapper form-wrapper">
   <h4 class="title bullet my-2">상품 등록</h4>
-  <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" name="prdCreateForm">
+  <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" name="prdCreateForm"
+    enctype="multipart/form-data">
+    <input type="hidden" name="cate">
     <table class="table border-bottom">
       <tbody>
         <tr>
@@ -77,8 +79,16 @@
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=1; i<=10; i++) { %>
+            <% for(let i=1; i<=15; i++) { %>
             <input type="file" name="img" class="form-control-file mb-2">
+            <% } %>
+          </td>
+        </tr>
+        <tr>
+          <td>상세내용 첨부</td>
+          <td>
+            <% for(let i=1; i<=2; i++) { %>
+            <input type="file" name="detail" class="form-control-file mb-2">
             <% } %>
           </td>
         </tr>
@@ -100,5 +110,5 @@
 <script src="/js/axios.min.js"></script>
 <script src="/js/quill.min.js"></script>
 <script src="/js/jstree.min.js"></script>
-<script src="/js/<%= currents[1] %>/<%= currents[1] %>.js"></script>
+<script src="/js/<%= currents[1] %>/<%= currents[1] %>-form.js"></script>
 <%- include('../../inc/foot.ejs') %>
