--- a/views/inc/search.ejs
+++ b/views/inc/search.ejs
@@ -52,12 +52,12 @@
         작성자</option>
       <% } %>
       <% if(currents[1] === 'prd') { %>
-      <option value="code" <%= (field === 'code' ? 'selected': '') %>>
-        상품코드</option>
-      <option value="name" <%= (field === 'name' ? 'selected': '') %>>
+      <option value="title" <%= (field === 'title' ? 'selected': '') %>>
         상품명</option>
       <option value="content" <%= (field === 'content' ? 'selected': '') %>>
         상품설명</option>
+      <option value="summary" <%= (field === 'summary' ? 'selected': '') %>>
+        요약설명</option>
       <% } %>
     </select>
     <input type="text" name="search" class="form-control mr-2" value="<%= search %>">
