--- a/public/scss/admin/admin-prd.scss
+++ b/public/scss/admin/admin-prd.scss
@@ -72,5 +72,14 @@
         }
       }
     }
+    .selected-tree {
+      @include flex($w: wrap);
+      .tree-data {
+        padding: 0.25em 0.5em;
+        background-color: $white-color;
+        border: 1px solid $grey-color;
+        margin: 0.25em;
+      }
+    }
   }
 }
