--- a/views/inc/search.ejs
+++ b/views/inc/search.ejs
@@ -58,6 +58,12 @@
         상품설명</option>
       <option value="summary" <%= (field === 'summary' ? 'selected': '') %>>
         요약설명</option>
+      <option value="priceSale" <%= (field === 'priceSale' ? 'selected': '') %>>
+        판매가격</option>
+      <option value="amount" <%= (field === 'amount' ? 'selected': '') %>>
+        재고량</option>
+      <option value="status" <%= (field === 'status' ? 'selected': '') %>>
+        판매상태</option>
       <% } %>
     </select>
     <input type="text" name="search" class="form-control mr-2" value="<%= search %>">
