--- a/views/admin/prd/prd-form.ejs
+++ b/views/admin/prd/prd-form.ejs
@@ -4,19 +4,18 @@
 <link rel="stylesheet" href="/css/jstree/style.min.css">
 <section class="prd-wrapper wrapper form-wrapper">
   <h4 class="title bullet my-2">상품 등록</h4>
-  <form action="/<%= currents[0] %>/<%= currents[1] %>" method="POST" name="prdCreateForm"
-    enctype="multipart/form-data">
+  <form action="<%= goPath %>" method="POST" name="prdCreateForm" enctype="multipart/form-data">
     <input type="hidden" name="cate">
     <table class="table border-bottom">
       <tbody>
         <tr>
           <td class="title" style="width: 15%;">
-            카테고리등록
+            카테고리 등록
             <span class="red">*</span>
           </td>
           <td class="content">
             <div class="selected-tree"></div>
-            <button class="btn btn-info btn-sm bt-cate">카테고리 선택</button>
+            <button type="button" class="btn btn-info btn-sm bt-cate">카테고리 선택</button>
           </td>
         </tr>
         <tr>
@@ -79,15 +78,19 @@
         <tr>
           <td>이미지 첨부</td>
           <td>
-            <% for(let i=1; i<=15; i++) { %>
+            <% for(let i=0; i<5; i++) { %>
             <input type="file" name="img" class="form-control-file mb-2">
+            <% if (i === 0) { %>
+            <div class="red">상품리스트에 노출되는 대표 이미지 입니다. 필수로 넣어주세요.</div>
+            <hr>
+            <% } %>
             <% } %>
           </td>
         </tr>
         <tr>
           <td>상세내용 첨부</td>
           <td>
-            <% for(let i=1; i<=2; i++) { %>
+            <% for(let i=0; i<2; i++) { %>
             <input type="file" name="detail" class="form-control-file mb-2">
             <% } %>
           </td>
@@ -95,7 +98,7 @@
       </tbody>
     </table>
     <div class="text-center my-4">
-      <a href="/<%= currents[0] %>/<%= currents[1] %>" class="btn btn-primary float-right">리스트</a>
+      <a href="<%= goList %>" class="btn btn-primary float-right">리스트</a>
       <button class="btn btn-primary mx-1">등록</button>
       <button type="reset" class="btn btn-danger mx-1">다시작성</button>
     </div>
@@ -107,8 +110,8 @@
     </div>
   </div>
 </section>
-<script src="/js/axios.min.js"></script>
 <script src="/js/quill.min.js"></script>
+<script src="/js/axios.min.js"></script>
 <script src="/js/jstree.min.js"></script>
 <script src="/js/<%= currents[1] %>/<%= currents[1] %>-form.js"></script>
 <%- include('../../inc/foot.ejs') %>
