--- a/views/admin/prd/prd-list.ejs
+++ b/views/admin/prd/prd-list.ejs
@@ -2,7 +2,6 @@
 <%- include('../../inc/header.ejs') %>
 <section class="prd-wrapper list-wrapper wrapper">
   <div class="my-2">
-    <div class="mb-2">상품개수: <%= totalRecord %>개</div>
     <div class="d-flex">
       <%- include('../../inc/search.ejs') %>
       <%- include('../../inc/sort.ejs') %>
@@ -24,7 +23,7 @@
       <% let i = 0; %>
       <% for(let v of lists) { %>
       <tr>
-        <td><%= totalRecord - (page - 1) * 5 - i++ %></td>
+        <td><%= totalRecord - (page - 1) * 10 - i++ %></td>
         <td class="td-icon">
           <img src="<%= v.img %>" alt="prd">
         </td>
@@ -65,9 +64,12 @@
       <% } %>
     </tbody>
   </table>
-  <%- include('../../inc/pager.ejs', pager) %>
-  <div class="text-center my-4">
-    <a href="<%= goList %>&type=create" class="btn btn-primary">상품등록</a>
+    <div class="mb-2">
+    <p class="text-right">총 레코드: <%= totalRecord %>개</p>
   </div>
+  <%- include('../../inc/pager.ejs', pager) %>
+ <!--  <div class="text-center my-4">
+    <a href="<%= goList %>&type=create" class="btn btn-primary">상품등록</a>
+  </div> -->
 </section>
 <%- include('../../inc/foot.ejs') %>
