--- a/public/scss/admin/admin-prd.scss
+++ b/public/scss/admin/admin-prd.scss
@@ -1,5 +1,42 @@
 @import '../common';
 .prd-wrapper {
+  .small {
+    width: 200px;
+  }
+  .red {
+    color: red;
+  }
+  .modal-wrapper {
+    @include flex($h: center, $v: center);
+    @include layer($p: fixed, $l: 0, $t: 0, $i: 99);
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    .modal-wrap {
+      width: 50%;
+      min-width: 300px;
+      height: 80%;
+      border: 2px solid $dark-color;
+      background-color: white;
+      overflow: auto;
+      @include flex($h: center, $v: center);
+      @include flexCol;
+      #jstreeWrap {
+        margin-top: 1em;
+        width: 90%;
+        flex-grow: 1;
+      }
+    }
+  }
+  .selected-tree {
+    @include flex($w: wrap);
+    .tree-data {
+      padding: 0.25em 0.5em;
+      background-color: $white-color;
+      border: 1px solid $grey-color;
+      margin: 0.25em;
+    }
+  }
   &.list-wrapper {
     .btn-wrap {
       padding: 1em 0 0.5em 0;
@@ -43,42 +80,21 @@
       }
     }
   }
-  &.form-wrapper {
-    .small {
-      width: 200px;
-    }
-    .red {
-      color: red;
-    }
-    .modal-wrapper {
-      @include flex($h: center, $v: center);
-      @include layer($p: fixed, $l: 0, $t: 0, $i: 99);
-      width: 100%;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.7);
-      .modal-wrap {
-        width: 50%;
-        min-width: 300px;
-        height: 80%;
-        border: 2px solid $dark-color;
-        background-color: white;
-        overflow: auto;
-        @include flex($h: center, $v: center);
-        @include flexCol;
-        #jstreeWrap {
-          margin-top: 1em;
-          width: 90%;
-          flex-grow: 1;
-        }
+  &.update-wrapper {
+    .file-wrap {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 0.5em;
+      padding-bottom: 0.5em;
+      border-bottom: 1px dotted #ccc;
+      .img {
+        width: 80px;
+        margin-right: 0.5em;
+        padding: 2px;
+        border: 1px solid #dc3545;
       }
-    }
-    .selected-tree {
-      @include flex($w: wrap);
-      .tree-data {
-        padding: 0.25em 0.5em;
-        background-color: $white-color;
-        border: 1px solid $grey-color;
-        margin: 0.25em;
+      .file {
+        margin-right: 0.5em;
       }
     }
   }
